# Convex-hull

./: .gitignore  CMakeLists.txt  convex_hull_solver.cpp  convex_hull_solver.h  main.cpp  point.cpp  point.hpp  points_generator.cpp  points_generator.h  svg_helper.cpp  svg_helper.h
cmdline/: app.cpp  commands.hpp  config.hpp
input_sets_txt/: big_input_set.txt  small_input_set.txt
quickhull_parallel/: convex_hull_solver_parallel.cpp  convex_hull_solver_parallel.hpp
quickhull_parallel_future/: convex_hull_solver_parallel_future.cpp  convex_hull_solver_parallel_future.hpp
quickhull_single_thead/: convex_hull_solver.cpp  convex_hull_solver.h
tests/: quickhull_test.cpp
